--- a/style/main.css
+++ b/style/main.css
@@ -9,9 +9,11 @@
     box-sizing: border-box;
 }
 
+/*BASE*/
 body {
     background: var(--preta);
     font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
 
 header .container {
@@ -36,4 +38,19 @@ header nav a {
 
 header nav a:hover {
     color: #fff;
+}
+
+
+/*MAIN MOVIE*/
+.main-movie {
+    font-size: 16px;
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('../img/capa-cruella.jpg');
+
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
